# telegram_bot

./: .env  .replit  README.md  constants.py  main.py  pyproject.toml  responses.py  webserver.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
