[tool.poetry]
name = "repl_python3_beta_telegrambot-3"
version = "0.1.0"
description = ""
authors = ["EeroKokkonen <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
telegram = "^0.0.1"
python-telegram-bot = "^13.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
